# pybase

./: .pre-commit-config.yaml  404.html  LICENSE  README.md  index.html  main.py  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml
.github/workflows/: actions.yml  ci.yml
api/: index.html
app/: main.py
app/utils/: env.py
docs/: api.md
search/: search_index.json
src/: main.py
tests/: conftest.py  test_main.py
