[project]
name = "pybase"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "loguru>=0.7.3",
]

[dependency-groups]
dev = [
    "mkdocs-material>=9.6.18",
    "mkdocstrings-python>=1.18.2",
    "mypy>=1.17.1",
    "pytest>=8.4.2",
    "ruff>=0.12.12",
]
